<resources>
    <string name="app_name">My Application</string>
    <string name="ten_digit_mobile">10 digit mobile number</string>
    <string name="next">Next</string>
    <string name="otp_helper_message">Enter 4 digit OTP sent on your mobile</string>
    <string name="login">Login</string>
    <string name="otp_required">4 digit OTP required</string>
    <string name="incorrect_password_error">Incorrect password entered</string>
    <string name="service">Service</string>
    <string name="fill_form">Fill Form</string>
    <string name="full_name">Full name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_address">Email address</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="postal_code">Postal code</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="preference_file_key">login_details</string>
    <string name="full_name_required_error">Full name is required</string>
    <string name="email_required_error">Email is required</string>
    <string name="address_required_error">Address is required</string>
    <string name="postal_required_error">Postal code is required</string>
    <string name="required_helper">required</string>
    <string name="booked_services_collection_key">booked_services</string>
    <string name="services_collection_key">services</string>
    <string name="booked">Booked</string>
    <string name="okay">Okay</string>
    <string name="error_message">Something went wrong</string>
    <string name="atleast_one_service_required_error">Select atleast one service to proceed</string>
    <string name="services_opted">Services opted</string>
    <string name="one_time_password">One Time Password</string>
    <string name="services_available">Services available</string>
</resources>